GS-3265 removed unnecessary duplicate ie6 style, fixed ie7 alignment

--- a/src/webapp/res/css/school/overview.css
+++ b/src/webapp/res/css/school/overview.css
@@ -211,9 +211,8 @@ hr { /* has IE 7 equivalent */
 	border: 0;
 }
 
-.stars { /* has IE 7 equivalent */
+.stars {
 	margin: 7px 0 0 0;
-	_margin: 7px 0 0 0; /* IE 6 hack */
 	border: 0;
 }
 
